--- a/pom.xml
+++ b/pom.xml
@@ -41,14 +41,13 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.javaproject</groupId>
-			<artifactId>notificationservice</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>javax.persistence</groupId>
@@ -56,9 +55,9 @@
 			<version>2.2</version>
 		</dependency>
 		<dependency>
-			<groupId>org.hibernate</groupId>
+			<groupId>org.hibernate.orm</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>6.1.6.Final</version>
+			<version>6.4.1.Final</version>
 			<type>pom</type>
 		</dependency>
 		<dependency>
