--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
+server.port=8080
 spring.application.name=notificationservice
 logging.leve.root=INFO
-spring.datasource.url=jdbc:h2:mem:notificationdb
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=123
 spring.h2.console.path=/h2
 spring.h2.console.enabled=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=update
+spring.data.jpa.repositories.bootstrap-mode=default
+
+spring.jpa.show-sql=true
