add rest controller and putting some parameters in strategies classes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
+# APPLICATION
 server.port=8080
 spring.application.name=notificationservice
 logging.leve.root=INFO
+
+# DATABASE
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
@@ -11,8 +14,11 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=update
 spring.data.jpa.repositories.bootstrap-mode=default
 
-
-
-
+# SERVICE PARAMETERS
+marketing.max.requests=3
+marketing.period.requests=60
+news.max.requests=1
+status.max.requests=2
+status.period.requests=1
 
 
