add openapi documentation with swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # APPLICATION
 server.port=8080
+server.servlet.context-path=/
 spring.application.name=notificationservice
 logging.leve.root=INFO
 
@@ -20,5 +21,10 @@ marketing.period.requests=60
 news.max.requests=1
 status.max.requests=2
 status.period.requests=1
+
+# OPEN API
+springdoc.api-docs.path=/notificationservice-docs
+springdoc.swagger-ui.path=/swagger-ui-notificationservice.html
+
 
 
